# Kode

./: package-lock.json  package.json  vite.config.ts
.trae/documents/: fashion-ecommerce-architecture.md  fashion-ecommerce-prd.md  orpaynter-ai-platform-architecture.md  orpaynter-ai-platform-prd.md
.vercel/: project.json
MASTER_CODE/: BANT_Chatbot_Test_Report.md  BUILD_STATUS.md  DEPLOYMENT_PACKAGE.md  OrPaynter_Comprehensive_Test_Report.md  OrPaynter_Desktop_Build_Guide.md  OrPaynter_Test_Report.md  authentication_system_test_report.md  bant_chatbot_verification_test_report.md  comprehensive_website_audit_report.docx  comprehensive_website_audit_report.md  deploy_url.txt  orpaynter_comprehensive_analysis_report.md  react_application_analysis_report.md  technical_analysis_report.md  website_analysis_report.md
MASTER_CODE/docs/: OrPaynter_API_Documentation.md  OrPaynter_Enhanced_Development_Report.docx  OrPaynter_Enhanced_Development_Report.md  framework_analysis.md  orpaynter_github_website_analysis.docx  orpaynter_github_website_analysis.md  research_plan_framework_analysis.md  revenue_requirements.md  site_audit_analysis.md
MASTER_CODE/extract/: complete_repo_analysis.json  current_broken_site_audit.json  (+23 more)
MASTER_CODE/orpaynter-desktop/src-tauri/: Cargo.toml  tauri.conf.json
orpaynter-ai-platform/: .dockerignore  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  SECURITY.md  docker-compose.yml  health-check.sh  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-crud-operations.js  test-supabase.js  tsconfig.json  vite.config.ts
(+229 files in other folders)
