[package]
name = "orpaynter"
version = "0.1.0"
description = "OrPaynter Desktop Application"
authors = ["MiniMax Agent"]
license = ""
repository = ""
edition = "2021

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-all", "fs-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
